infrastructure/overlay/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-prod

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # HTTPS configuration
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:579871530627:certificate/e4c05b7e-5c96-4ba5-b660-dc8880f1b587

    # Redirect HTTP to HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    external-dns.alpha.kubernetes.io/hostname: api.prod.emmanuelogah.com

spec:
  ingressClassName: alb

  rules:
    - host: api.prod.emmanuelogah.com

      http:
        paths:

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
